@@ -2,7 +2,7 @@
 <!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.10"/>
-  <object class="GtkDialog" id="GuidedInputDialog">
+  <template class="ofaGuidedInput" parent="GtkDialog">
     <property name="can_focus">False</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
@@ -51,7 +51,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox" id="piece-parent">
+          <object class="GtkBox" id="bin-parent">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
@@ -71,5 +71,5 @@
       <action-widget response="-6">btn-cancel</action-widget>
       <action-widget response="-5">btn-ok</action-widget>
     </action-widgets>
-  </object>
+  </template>
 </interface>
